updated deposits and royalties handles
